#9978 extra space issue

--- a/public/less/frontend/components/text-only-v1.less
+++ b/public/less/frontend/components/text-only-v1.less
@@ -15,9 +15,15 @@
         }
     }
 
-}
+}// for editor
 .fr-element {
     a.ssb-element-button,a.btn-link {
         display: inline-block;
     }
 }
+.fr-view span.fr-emoticon,{
+    display: inline-block;
+  }
+  .fr-view span.fr-emoticon>span.ssb-bg-color-inline-block{
+     display: inherit;
+  }
